sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value e
  e = ((getNombreValeurs()).toDouble/2).toInt
  ^AlgShellSort:4: error: not found: value e
  while (e>0) {
         ^AlgShellSort:5: error: not found: value e
    insertionSort(e)
                  ^AlgShellSort:6: error: not found: value e
    e = (e.toDouble/2).toInt
    ^