sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  e = ((getNombreValeurs()).toDouble/2).toInt
  while (e>0) {
    insertionSort(e)
    e = (e.toDouble/2).toInt
  }
}



def insertionSort(e : Int) = {
  var n = getNombreValeurs()
  var v = 0
  var j = e
  for (i <- 1 to n-1) {
    v = getValeur (i)
    while ( i-j >=0 && !plusPetitQue((i-j),v)) {
        copie(i-j,i-j+1)
        j += e 
      } 
    setValeur(i-j+1,v)
    j=1
  }
}